Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82371

When showing a simple Shape item it will cause a crash related to eglfs

XMLWordPrintable

    • Linux/Other display system
    • 239a90b8d5588bc6536cb81bbba7af8cc049d945 (qt/qtdeclarative/dev) e2e8900bfa9dcd240ae2c20217b67f9dbbb2a645 (qt/qtdeclarative/5.15)

      When showing a simple Shape item it will cause a crash related to eglfs. This was reproduced with the Intel NUC Boot2Qt image but not the Toradex Apalis imx6 image. If software rendering is forced on then it works fine. The call stack is:

      (gdb) backtrace
      #0 0x0000555555837ec0 in ?? ()
      #1 0x00007ffff3dbfa2f in ?? () from /usr/lib/dri/i965_dri.so
      #2 0x00007ffff3dbfab0 in ?? () from /usr/lib/dri/i965_dri.so
      #3 0x00007ffff47bb9eb in ?? () from /usr/lib/libEGL.so.1
      #4 0x00007ffff47aa3aa in eglMakeCurrent () from /usr/lib/libEGL.so.1
      #5 0x00007ffff485700f in ?? () from /usr/lib/libQt5EglFSDeviceIntegration.so.5
      #6 0x00007ffff7e734c7 in QOpenGLContext::doneCurrent() () from /usr/lib/libQt5Gui.so.5
      #7 0x00007ffff7eaa52a in QOffscreenSurface::~QOffscreenSurface() () from /usr/lib/libQt5Gui.so.5
      #8 0x00007ffff7b60fd9 in QOffscreenSurface::~QOffscreenSurface() () from /usr/lib/libQt5Gui.so.5
      #9 0x00007ffff09fefc4 in ?? () from /usr/lib/libQt5QuickShapes.so.5
      #10 0x00007ffff0a06ec5 in ?? () from /usr/lib/libQt5QuickShapes.so.5
      #11 0x00007ffff0a05a09 in QQuickShape::updatePolish() () from /usr/lib/libQt5QuickShapes.so.5
      #12 0x00007ffff2b5c4d2 in QQuickWindowPrivate::polishItems() () from /usr/lib/libQt5Quick.so.5
      #13 0x00007ffff2bb2e23 in ?? () from /usr/lib/libQt5Quick.so.5
      #14 0x00007ffff2bb42a1 in ?? () from /usr/lib/libQt5Quick.so.5
      #15 0x00007ffff7eaa629 in QWindow::event(QEvent*) () from /usr/lib/libQt5Gui.so.5
      #16 0x00007ffff2b6448b in QQuickWindow::event(QEvent*) () from /usr/lib/libQt5Quick.so.5
      #17 0x00007ffff7325498 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
      #18 0x00007ffff7e9f583 in QGuiApplicationPrivate::processExposeEvent(QWindowSystemInterfacePrivate::ExposeEvent*) () from /usr/lib/libQt5Gui.so.5
      #19 0x00007ffff7ec0cb5 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /usr/lib/libQt5Gui.so.5
      #20 0x00007ffff7ec0a8b in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Gui.so.5
      #21 0x00007ffff7ec0f98 in QWindowSystemInterface::flushWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Gui.so.5
      #22 0x00007ffff489194a in QEglFSWindow::setVisible(bool) () from /usr/lib/libQt5EglFSDeviceIntegration.so.5
      #23 0x00007ffff7ea119f in QWindowPrivate::setVisible(bool) () from /usr/lib/libQt5Gui.so.5
      #24 0x00007ffff2adafa6 in QQuickWindowQmlImpl::setWindowVisibility() () from /usr/lib/libQt5Quick.so.5
      #25 0x00007ffff2adfccb in QQuickWindowQmlImpl::componentComplete() () from /usr/lib/libQt5Quick.so.5
      #26 0x00007ffff0902cc6 in QQuickApplicationWindow::componentComplete()
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            andysh Andy Shaw
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes